Added build options to choose whether we use OpenMP or not. There are scripts for common tasks, if you want a customized one, use the script configure.py to generate or execute a build script.

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -4,8 +4,14 @@ ENABLE_LANGUAGE(C CXX)
 
 PROJECT(cpt_yahsp_library)
 
-FIND_PACKAGE(OpenMP)
-FIND_PACKAGE(MPI)
+IF( CPT_WITH_MPI )
+    FIND_PACKAGE(MPI)
+ENDIF()
+
+IF( CPT_WITH_OMP )
+    FIND_PACKAGE(OpenMP)
+ENDIF()
+
 FIND_PACKAGE(BISON REQUIRED)
 FIND_PACKAGE(FLEX REQUIRED)
 
