--- a/cpt-yahsp/src/CMakeLists.txt
+++ b/cpt-yahsp/src/CMakeLists.txt
@@ -65,13 +65,18 @@ if (MPI_FOUND)
 
 endif()
 
+ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
+SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-dae
+    PROPERTIES 
+    COMPILE_FLAGS "-DDAE"
+    )
 
 if (OPENMP_FOUND)
 
   ADD_LIBRARY(${PROJECT_NAME}-common-omp STATIC ${SOURCES})
   ADD_LIBRARY(${PROJECT_NAME}-mt STATIC ${MT_SOURCES})
   ADD_LIBRARY(${PROJECT_NAME}-common-dae-omp STATIC ${SOURCES})
-  ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
   ADD_LIBRARY(${PROJECT_NAME}-dae-sm STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
   ADD_LIBRARY(${PROJECT_NAME}-dae-mt STATIC ${SOURCES} ${MT_SOURCES} ${DAE_SOURCES})
 
@@ -84,7 +89,6 @@ if (OPENMP_FOUND)
 
   SET_TARGET_PROPERTIES(
     ${PROJECT_NAME}-common-dae-omp
-    ${PROJECT_NAME}-dae
     PROPERTIES 
     COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE"
     )
