--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -19,6 +19,8 @@ IF( DAE_WITH_OMP )
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
       SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     ENDIF()
+
+    ADD_DEFINITIONS(-DWITH_OMP)
 ENDIF()
 
 # Mpi Addons
