--- a/cpt-yahsp/src/CMakeLists.txt
+++ b/cpt-yahsp/src/CMakeLists.txt
@@ -65,6 +65,13 @@ if (MPI_FOUND)
 
 endif()
 
+ADD_LIBRARY(${PROJECT_NAME}-common-dae STATIC ${SOURCES})
+SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-common-dae
+    PROPERTIES 
+    COMPILE_FLAGS "-DDAE"
+    )
+
 ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
 SET_TARGET_PROPERTIES(
     ${PROJECT_NAME}-dae
