--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -38,13 +38,13 @@ LINK_DIRECTORIES(
 # VV : -DDAE for YAHSP headers, -D__STDC_CONSTANT_MACROS for macros INT64_C...
 ADD_DEFINITIONS(-W -Wall -DDAE -D__STDC_CONSTANT_MACROS)
 
-#IF (CMAKE_BUILD_TYPE MATCHES Debug)
+IF (NOT (CMAKE_BUILD_TYPE MATCHES Debug))
+ ADD_DEFINITIONS(-O3 -DNDEBUG)
+ENDIF()
 #  #ADD_DEFINITIONS(-DPAPERVERSION)
 #  ADD_DEFINITIONS(-pg -g)
 #ELSE()
-#  ADD_DEFINITIONS(-O3 -DNDEBUG)
-#ENDIF()
-
+ 
 # target + link libraries
 LINK_LIBRARIES(eoutils gmp eo rt gcov gdsl termcap)
 
